<resources>
    <string name="app_name">Fria</string>
    <string name="measure">mesure</string>
    <string name="free_measurement">Mesures libres</string>
    <string name="square_measurments">Mesures carrées </string>
    <string name="categories_title">Category item(dep item) </string>
    <string name="categories">Categories </string>
    <string name="favorite">Favorite </string>
    <string name="filter">Filter </string>
    <string name="more">More </string>
    <string name="search">Search </string>


    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string-array name="user_photos">
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xpf1/t51.2885-15/s306x306/e15/10665483_429615813855717_1490926670_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10891026_694434897342602_1094773634_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10894920_1382218332084671_10354293_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10895429_768163716566132_692639371_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899087_405295322969722_20422376_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899123_922231267802027_1123900984_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10903214_589111004559561_1485881959_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10914479_770066599745785_704061869_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10914587_1580079332227764_829762970_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10919231_605000369644967_1578007175_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10932142_330866587116424_1327271556_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10932410_1544715455813452_1107632347_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfp1/t51.2885-15/s306x306/e15/891516_579817258815508_1989379587_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/1922172_719849754801056_911351010_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10914370_1519297625009641_722250486_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903746_368501953321344_2002746420_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903270_1397263717236338_950192395_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903242_441936642627221_576882729_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899295_796858437028648_664655000_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899139_948470841831743_1406659049_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899123_922231267802027_1123900984_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899087_405295322969722_20422376_n.jpg</item>
    </string-array>
    <string name="user_profile_photo">http://igcdn-photos-f-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-19/929118_455075441302693_1605108410_a.jpg</string>
    <string name="bottom_transient_bar_behavior">com.tunjid.androidx.material.behavior.BottomTransientBarBehavior</string>
    <string name="clear">Effacer</string>


    <string name="red_advise_1">Pointez la caméra sur une surface texturée (horizontale ou verticale)</string>
    <string name="red_advise_2">"Sélectionnez la distance appropriée
  (0.5m - 3m) "</string>
    <string name="red_advise_3">Assurez-vous que l"éclairage est bonne</string>
    <string name="red_advise_4">Déplacez la caméra plus loin / Rapprochez la caméra</string>
    <string name="red_advise_5">Essayez de changer l"angle de vue</string>
    <string name="red_advise_6">Essayez de reconnaitre une autre surface</string>

    <string name="yellow_advise_1">Appuez sur le bouton de la règle</string>
    <string name="yellow_advise_2">Selectionnez la largeur</string>
    <string name="yellow_advise_3">Selectionnez la longueur</string>
    <string name="yellow_advise_4">Selectionnez la hauteur</string>
    <string name="yellow_advise_5">Appuyez sur confirmer</string>

    <string name="green_advise_1">Appuyez sur le bouton Rechercher</string>
    <string name="green_advise_2">Appuyez sur le bouton Règle pour réinitialiser</string>
    <string name="camera_load_animation_text">Déplacez le téléphone pour commencer</string>
    <string name="default_text">Pas de description</string>


    <string name="welcome_message">Fria</string>

    <string-array name="arcore_welcome_buttons">
        <item>@string/welcome_message</item>
    </string-array>

    <string name="info_textured">Utilisez des surfaces texturées plates, car ils sont plus visibles pour l"application.</string>
    <string name="info_move_short">Déplacez la caméra</string>
    <string name="how_to_recognize_surfaces">Comment reconnaitre les surfaces?</string>
    <string name="about_app">An app that lets you measure the real world in a 3d virtual cube and virtually place furniture in your home</string>
    <string name="how_app_works">It utilizes the ARCore and Sceneform libraries by google to generate  virtual surface plane  onto your floor.
        Then the surface can be measured to generate 3d measurements and place 3D models  </string>

    <string name="info_lighting">Veiller à un bon éclairage.</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="sign_in">Sign  in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget password</string>
    <string name="_2023_fria"><![CDATA[2023 Fria by A&I. All Rights Reserved20231 Fria by AB&IS. All Rights Reserved]]></string>
    <string name="new_customer_create_your_account"><![CDATA[New Customer? <font color=\'#008CFF\'>Create Your Account</font>]]></string>
    <string name="loading">Loading...</string>
    <string name="email_required">Email Required</string>
    <string name="enter_a_valid_email_address">Enter a valid email address</string>
    <string name="password_required">Password Required</string>
    <string name="password__at_least_8_characters">Password should be at least 8 characters</string>
    <string name="Invalid_email_or_password">Invalid email or password</string>

</resources>