<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/furniture_bg"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="342dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".view.LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen18sp"
            android:paddingStart="@dimen/dimen24dp"
            android:paddingEnd="@dimen/dimen24dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen30sp"
            android:textStyle="bold" />

        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginBottom="@dimen/dimen8dp"
            android:paddingStart="@dimen/dimen24dp"
            android:paddingEnd="@dimen/dimen24dp">

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/custom_border"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dimen5dp"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginBottom="@dimen/dimen8dp"
            android:paddingStart="@dimen/dimen24dp"
            android:paddingEnd="@dimen/dimen24dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/custom_border"
                android:hint="@string/password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen24dp"
            android:layout_marginTop="@dimen/dimen24dp"
            android:layout_marginRight="@dimen/dimen24dp"
            android:layout_marginBottom="@dimen/dimen24dp"
            android:background="@color/yellow"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="@dimen/dimen18sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen1dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:layout_marginBottom="@dimen/dimen10dp"
            android:background="@color/gray"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibri"
        android:gravity="center"
        android:paddingStart="@dimen/dimen24dp"
        android:paddingEnd="@dimen/dimen24dp"
        android:text="@string/_2023_fria"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>