<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toEndOf="parent"


        card_view:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/white"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingTop="30dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|left"
                android:layout_margin="22.0dip"
                android:layout_marginTop="14.0dip"
                android:fontFamily="@font/roboto_black"
                android:text="@string/how_to_recognize_surfaces"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold"

                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginTop="22.0dip"
                android:layout_marginRight="20.0dip"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/textured_surfaces_cv"
                    android:layout_width="fill_parent"
                    android:layout_height="100.0dip"
                    android:layout_marginBottom="@dimen/card_view_instruction_margin"
                    card_view:cardBackgroundColor="@color/archive_item_inner_bcg"
                    card_view:cardCornerRadius="@dimen/card_view_corner_radius"
                    card_view:cardElevation="0.0dip">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            card_view:cardCornerRadius="@dimen/card_view_corner_radius">

                            <com.houssem.fria.greetings.SquareImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentLeft="true"
                                android:background="@null"
                                android:scaleType="centerCrop"

                                android:src="@drawable/video_thumbnail_1"
                                />

                            <ImageView
                                android:layout_width="30.0dip"
                                android:layout_height="30.0dip"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:layout_margin="6.0dip"
                                android:background="@null"


                                android:src="@drawable/play_196"

                                android:visibility="visible" />
                        </androidx.cardview.widget.CardView>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_gravity="center_vertical"
                            android:foreground="?android:selectableItemBackground">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="10.0dip"
                                android:layout_marginRight="10.0dip"
                                android:gravity="center"
                                android:text="@string/info_textured"
                                android:textColor="#000000"
                                android:textSize="17.0sp" />
                        </RelativeLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/lighting_cv"
                    android:layout_width="fill_parent"
                    android:layout_height="100.0dip"
                    android:layout_marginBottom="@dimen/card_view_instruction_margin"
                    card_view:cardBackgroundColor="@color/archive_item_inner_bcg"
                    card_view:cardCornerRadius="@dimen/card_view_corner_radius"
                    card_view:cardElevation="0.0dip">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            card_view:cardCornerRadius="@dimen/card_view_corner_radius">

                            <com.houssem.fria.greetings.SquareImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentLeft="true"
                                android:background="@null"
                                android:scaleType="centerCrop"

                                android:src="@drawable/video_thumbnail_2" />

                            <ImageView
                                android:layout_width="30.0dip"
                                android:layout_height="30.0dip"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:layout_margin="6.0dip"
                                android:src="@drawable/play_196" />
                        </androidx.cardview.widget.CardView>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_gravity="center_vertical"
                            android:foreground="?android:selectableItemBackground">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="10.0dip"
                                android:layout_marginRight="10.0dip"
                                android:gravity="center"
                                android:text="@string/info_lighting"
                                android:textColor="#000000"
                                android:textSize="17.0sp" />
                        </RelativeLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/moving_cv"
                    android:layout_width="fill_parent"
                    android:layout_height="100.0dip"
                    android:layout_marginBottom="@dimen/card_view_instruction_margin"
                    card_view:cardBackgroundColor="@color/archive_item_inner_bcg"
                    card_view:cardCornerRadius="@dimen/card_view_corner_radius"
                    card_view:cardElevation="0.0dip">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            card_view:cardCornerRadius="@dimen/card_view_corner_radius">


                            <com.houssem.fria.greetings.SquareImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentLeft="true"
                                android:background="@null"
                                android:scaleType="centerCrop"

                                android:src="@drawable/video_thumbnail_3"/>

                            <ImageView
                                android:layout_width="30.0dip"
                                android:layout_height="30.0dip"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:layout_margin="6.0dip"
                                android:src="@drawable/play_196" />
                        </androidx.cardview.widget.CardView>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_gravity="center_vertical"
                            android:foreground="?android:selectableItemBackground">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="10.0dip"
                                android:layout_marginRight="10.0dip"
                                android:gravity="center"
                                android:text="@string/info_move_short"
                                android:textColor="#000000"
                                android:textSize="17.0sp" />
                        </RelativeLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/exit_greeting"

        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="Suivant"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"
        android:textColor="@color/friaBackgroundColor"
        android:textColorHighlight="@color/bg_comments"
        android:textSize="18.0sp"
        android:textStyle="normal"
        android:fontFamily="@font/roboto"
        card_view:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="@+id/relativeLayout"
        card_view:layout_constraintVertical_bias="1.0"
        card_view:rippleColor="@color/friaBackgroundColor" />


</androidx.constraintlayout.widget.ConstraintLayout>